@@ -34,7 +34,6 @@
 		
 		<openmrs.addresshierarchy-api.version>2.14.0</openmrs.addresshierarchy-api.version>
 		<openmrs.calculation.version>1.3.0</openmrs.calculation.version>
-		<openmrs.commonlabtest.version>1.5.4-SNAPSHOT</openmrs.commonlabtest.version>
 		<openmrs.htmlwidgets.version>1.6.0</openmrs.htmlwidgets.version>
 		<openmrs.legacyui.version>1.8.4</openmrs.legacyui.version>
 		<openmrs.logic.version>0.5</openmrs.logic.version>
@@ -176,12 +175,6 @@
             <version>${poi.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-        	<groupId>org.openmrs.module</groupId>
-        	<artifactId>commonlabtest-api</artifactId>
-        	<version>${openmrs.commonlabtest.version}</version>
-            <scope>provided</scope>
-        </dependency>
 	</dependencies>
     
     <build>
@@ -190,35 +183,36 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.15.0</version>
 					<configuration>
-						<target>1.8</target>
-						<source>1.8</source>
+						<release>11</release>
 					</configuration>
 				</plugin>
-				
-<!--                <plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.22.2</version>
+					<configuration>
+						<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>net.revelc.code.formatter</groupId>
 					<artifactId>formatter-maven-plugin</artifactId>
+					<version>2.23.0</version>
+
 					<configuration>
+						<encoding>UTF-8</encoding>
+						<lineEnding>KEEP</lineEnding>
 						<directories>
-							<directory>.</directory>
+							<directory>src</directory>
 						</directories>
-						<configFile>../OpenMRSFormatter.xml</configFile>
 						<includes>
 							<include>**/*.java</include>
-							<include>**/*.json</include>
 						</includes>
+						<configFile>OpenMRSFormatter.xml</configFile>
 					</configuration>
-					<executions>
-						<execution>
-							<phase>compile</phase>
-							<goals>
-								<goal>format</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
--->
 			</plugins>
 		</pluginManagement>
 	</build>
